# TheGoog-PyRadiant

./: DEVELOPER_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
cod1radiant/: __init__.py  config.py  main.py
cod1radiant/core/: __init__.py  commands.py  document.py  entity_defs.py  events.py  octree.py  operations.py  primitives.py  selection.py  texture_manager.py  ui_state.py
cod1radiant/gui/: __init__.py  brush_properties.py  entity_list_panel.py  entity_properties_panel.py  filter_panel.py  icon_loader.py  info_panel.py  main_window.py  texture_browser.py  texture_properties.py
cod1radiant/gui/controllers/: __init__.py  brush_controller.py  edit_controller.py  file_controller.py  view_controller.py
cod1radiant/gui/dialogs/: __init__.py  settings_dialog.py
cod1radiant/gui/main_window_helpers/: __init__.py  dock_builder.py  menu_builder.py  toolbar_builder.py
cod1radiant/gui/tools/: __init__.py  base_tool.py  brush_creation_tool.py  clipping_tool.py  edge_tool.py  resize_tool.py
cod1radiant/gui/viewport_2d/: __init__.py  geometry_builder.py  grid_renderer.py  input_handler.py  overlay_renderer.py  renderer.py  selection_handler.py  (+1 more)
cod1radiant/io/: __init__.py
cod1radiant/render/: __init__.py  batch_renderer.py  bitmap_font.py  camera.py  frustum.py  instanced_renderer.py  text_renderer.py
cod1radiant/themes/: __init__.py  blue_ocean.qss  dark.qss  density_compact.qss  density_semi_compact.qss  forest_green.qss  light.qss  midnight.qss
tests/: __init__.py  bezier_and_terrain_testmap.map
(+122 files in other folders)
